--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "next": "^14.0.0",
     "prettier": "^3.0.3",
     "puppeteer": "^21.4.1",
+    "query-string": "^8.1.0",
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.47.0",
