--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@clerk/nextjs": "^4.26.1",
     "@hookform/resolvers": "^3.3.2",
+    "@nextui-org/react": "^2.2.9",
     "@radix-ui/react-alert-dialog": "^1.0.5",
     "@radix-ui/react-dialog": "^1.0.5",
     "@radix-ui/react-dropdown-menu": "^2.0.6",
@@ -28,6 +29,7 @@
     "eslint-config-prettier": "^9.0.0",
     "eslint-config-standard": "^17.1.0",
     "eslint-plugin-tailwindcss": "^3.13.0",
+    "framer-motion": "^10.16.16",
     "lucide-react": "^0.291.0",
     "mongodb": "^6.3.0",
     "mongoose": "^8.0.3",
